# thaumic-cast

./: .env.example  .geminiignore  .gitignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  PRIVACY.md  README.md  SECURITY.md  commitlint.config.js  eslint.config.js  package.json  stylelint.config.js  tsconfig.json
.changeset/: add-extension-store-url.md  add-manual-speaker-server-api.md  add-mdns-and-streaming-buffer.md  add-settings-page.md  add-tpdf-dithering.md  artwork-resolution-optimization.md  audio-settings-improvements.md  backpressure-adaptive-backoff.md  bi-directional-pcm.md  bit-depth-settings-ui.md  button-group-component.md  codec-aware-frame-sizing.md  collapsible-sidebar.md  config.json  configurable-frame-duration.md  connection-status-refactor.md  core-maintenance-refactors.md  crossfade-silence-transitions.md  css-kebab-case.md  debounce-color-cache.md  debounce-fetch-groups.md  debug-audio-build-flag.md  eejjspur-fix-soc-dry.md  epoch-based-latency.md  event-driven-discovery.md  event-driven-ui-updates.md  extension-underflow-ramp.md  extract-css-modules.md  extract-thaumic-core-crate.md  fix-autostart-persistence.md  fix-desktop-runtime-errors.md  fix-extension-ui.md  fix-macos-dmg-signing.md  fix-macos-dock-icon.md  fix-onboarding-download-url.md  fix-pcm-passthrough-resume.md  fix-pcm-stop-timeout.md  fix-release-workflow.md  fix-server-settings.md  fix-sonos-album-art.md  (+63 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-pr.yml  release.yml
.husky/: commit-msg
apps/desktop/: CHANGELOG.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.css  App.module.css  App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/locales/: en.yml
apps/desktop/src-tauri/src/: bootstrap.rs  config.rs  context.rs  error.rs  lib.rs  main.rs  power.rs  protocol_constants.rs  state.rs  streaming_runtime.rs  tauri_emitter.rs  types.rs  utils.rs
apps/desktop/src-tauri/src/api/: commands.rs  http.rs  mod.rs  ws.rs
apps/desktop/src-tauri/src/events/: bridge.rs  emitter.rs  mod.rs
apps/desktop/src-tauri/src/services/: app_lifecycle.rs  discovery_service.rs  gena_event_processor.rs  latency_monitor.rs  mod.rs  stream_coordinator.rs  topology_monitor.rs
apps/desktop/src-tauri/src/sonos/: client.rs  discovery.rs  gena.rs  gena_client.rs  gena_event_builder.rs  gena_store.rs  mod.rs  soap.rs  traits.rs  types.rs  utils.rs
apps/desktop/src-tauri/src/sonos/discovery/: mod.rs  ssdp.rs  types.rs
apps/desktop/src-tauri/src/stream/: icy.rs  manager.rs  mod.rs  transcoder.rs  wav.rs
apps/desktop/src-tauri/src/ui/: mod.rs  tray.rs
apps/desktop/src/components/: ActionButton.tsx  DeviceCard.module.css  DeviceCard.tsx  ManualSpeakerForm.module.css  ManualSpeakerForm.tsx  Sidebar.module.css  Sidebar.tsx
apps/desktop/src/hooks/: useAddManualSpeaker.ts  useButtonAction.ts  useHashScroll.ts  useOnboarding.ts
apps/desktop/src/lib/: events.ts  i18n.ts  onboarding.ts  theme.ts
apps/desktop/src/locales/: en.json
apps/desktop/src/state/: store.ts
apps/desktop/src/views/: Onboarding.module.css  Onboarding.tsx  Server.module.css  Server.tsx  Settings.module.css  Settings.tsx  Speakers.module.css  Speakers.tsx
apps/extension/: CHANGELOG.md  manifest.json  package.json  tsconfig.json  vite.config.ts
apps/extension/_locales/en/: messages.json
apps/extension/src/background/: codec-support.ts  connection-state.ts  discovery.ts  main.ts  metadata-cache.ts  notification-service.ts  notify.ts  offscreen-broker.ts  offscreen-manager.ts  persistence-manager.ts  router.ts  session-manager.ts  sonos-event-handlers.ts  sonos-state.ts
apps/extension/src/content/: constants.ts  media-bridge.ts  media-reader.ts  video-sync.ts
apps/extension/src/domain/: speaker.ts
apps/extension/src/lib/: backoff.ts  codec-cache.ts  debounced-storage.ts  device-config.ts  (+11 more)
apps/server/: CHANGELOG.md  Cargo.toml  README.md  config.example.yaml  package.json
apps/server/src/: config.rs  main.rs
apps/wasapi-capture/: Cargo.toml
apps/wasapi-capture/src/: main.rs
desktop/: index.html  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  main.tsx  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  network.rs  tray.rs
desktop/src-tauri/src/server/: mod.rs  routes.rs
desktop/src-tauri/src/sonos/: client.rs  gena.rs  mod.rs  soap.rs  ssdp.rs  state.rs
desktop/src-tauri/src/stream/: manager.rs  mod.rs
desktop/src/components/: StatusPanel.tsx
docs/: ARCHITECTURE.md  desktop-improvement-plan.md
extension/: package.json  tsconfig.json  vite.config.ts
extension/_locales/en/: messages.json
extension/src/: background.ts  manifest.json
extension/src/api/: client.ts
extension/src/background/: media-registry.ts  offscreen-manager.ts  stream-manager.ts  ws-client.ts
extension/src/content/: media-bridge.ts  media-reader.ts
extension/src/hooks/: useAuthStatus.ts
extension/src/lib/: auth-client.ts  http.ts  i18n.ts  settings.ts
extension/src/locales/: en.json
extension/src/offscreen/: aac-encoder.ts  audio-worklet.ts  offscreen.html  offscreen.ts
extension/src/options/: Options.tsx  index.html  main.tsx  styles.css
extension/src/popup/: Popup.tsx  components.tsx  index.html  main.tsx  styles.css
extension/src/styles/: base.css
scripts/: setup.sh  sync-versions.ts
server/: package.json  tsconfig.json
server/src/: auth.ts  index.ts  jwt.ts  stream-manager.ts
server/src/db/: index.ts  schema.ts
server/src/lib/: gena-listener.ts  soap-client.ts  sonos-client.ts  sonos-local-client.ts  ssdp-discovery.ts
server/src/routes/: api.ts  local-sonos.ts  sonos.ts
server/ui/: index.html  package.json  tsconfig.json  tsconfig.node.json
server/ui/src/: App.tsx  main.tsx  styles.css
(+105 files in other folders)
