[package]
name = "thaumic-server"
version = "0.1.0"
edition = "2021"
description = "Standalone headless server for Thaumic Cast"
license = "AGPL-3.0"

[[bin]]
name = "thaumic-server"
path = "src/main.rs"

[dependencies]
thaumic-core = { path = "../../packages/thaumic-core" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Configuration
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Concurrency
parking_lot = "0.12"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"
