[package]
name = "wasapi-capture"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.62", features = [
    "Win32_Media_Audio",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_Foundation",
] }
windows-core = "0.62"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3"
