[package]
name = "wasapi-capture"
version = "0.1.0"
edition = "2021"

[dependencies]
thaumic-core = { path = "../../packages/thaumic-core" }
thaumic-capture = { path = "../../packages/thaumic-capture" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["sync"] }
