[package]
name = "thaumic-cast-desktop"
version = "0.7.0"
description = "Thaumic Cast Desktop"
authors = ["Thaumic Cast"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "thaumic_cast_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
async-trait = "0.1"
dashmap = "5"
local-ip-address = "0.5"
parking_lot = "0.12"
log = "0.4"
tokio-stream = { version = "0.1", features = ["sync"] }
quick-xml = { version = "0.38.4", features = ["serialize"] }
html-escape = "0.2.13"
socket2 = { version = "0.5", features = ["all"] }
rust-i18n = "3"
sys-locale = "0.3"
bytemuck = { version = "1", features = ["derive"] }
mdns-sd = "0.17"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
